<resources>
    <string name="app_name">Club Night Planner</string>
    <string name="tab_text_1">Players</string>
    <string name="tab_text_2">Courts</string>
    <string name="tab_text_3">Fixtures</string>

    <string name="court_fragment_message">Hello court fragment</string>
    <string name="player_fragment_message">Hello player fragment</string>
    <string name="fixture_fragment_message">Hello fixture fragment</string>
    <string name="no_courts_listed">No Courts Listed</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="level_hint">League (e.g. 10)</string>
    <string name="no_active_players">No Active Players</string>
    <string name="level">League: %1$d</string>
    <string name="add_player">Add Player</string>
    <string name="edit_player">Edit Player</string>
    <string name="clear_players">Clear Players</string>
    <string name="clear_courts">Clear Courts</string>
    <string name="clear_fixtures">Clear Fixtures</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="settings">Settings</string>
    <string name="no_scheduled_fixtures">No Scheduled Fixtures</string>
    <string name="select_time">Select Time</string>
    <string name="select_courts">Select Courts</string>
    <string name="add_fixture">Add Fixture</string>
    <string name="view_matches">Fixtures</string>
    <string name="search_players">Search Players</string>
    <string name="search">Search</string>
    <string name="now">"Now:\t\t"</string>
    <string name="next">"Next:\t\t"</string>
    <string name="league">"League:\t\t"</string>
    <string name="settings_spinner_label">Club Settings</string>
    <string name="settings_start_time">Start Time</string>
    <string name="settings_session_length">Session Length</string>
    <string name="settings_session_length_suffix">" mins"</string>
</resources>
