<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_players"
        android:title="@string/search_players"
        android:icon="@drawable/ic_search_icon"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/clear_players"
        android:title="@string/clear_players"
        app:showAsAction="never"/>
    <item
        android:id="@+id/clear_courts"
        android:title="@string/clear_courts"
        app:showAsAction="never"/>
    <item
        android:id="@+id/clear_fixtures"
        android:title="@string/clear_fixtures"
        app:showAsAction="never"/>
    <item
        android:id="@+id/clear_all"
        android:title="@string/clear_all_data"
        app:showAsAction="never"/>
</menu>