<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGeneralBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="70dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="20dp">

        <EditText
            android:id="@+id/player_form_name"
            style="@style/form_input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:shadowDy="@android:integer/config_longAnimTime" />

        <EditText
            android:id="@+id/player_form_level"
            style="@style/form_input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/level_hint"
            android:inputType="number"
            android:maxLength="5" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <Button
            android:id="@+id/submit_player_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            style="@style/submit_button_style"/>

    </LinearLayout>



</LinearLayout>