<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGeneralBackground"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingTop="50dp"
    tools:context=".ui.main.players.AddPlayerActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/colorGeneralBackground"
        android:orientation="vertical">

        <EditText
            android:id="@+id/add_player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:maxLength="30"
            style="@style/form_input_style" />

        <EditText
            android:id="@+id/add_player_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="5"
            android:hint="@string/level_hint"
            style="@style/form_input_style" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <Button
            android:id="@+id/submit_new_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            style="@style/submit_button_style"/>

    </LinearLayout>

</LinearLayout>