<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/list_item_border">

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:paddingTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/textPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="16sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.7">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/now"
                    style="@style/player_field_key"/>

                <TextView
                    android:id="@+id/player_current_court"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/player_field_value"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    style="@style/player_field_key"/>

                <TextView
                    android:id="@+id/player_next_court"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/player_field_value"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.3"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/league"
                style="@style/player_field_key"/>

            <TextView
                android:id="@+id/player_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/player_field_value"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>